--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "",
   "main": "src/app.js",
   "scripts": {
-    "start": "npm install && npx knex migrate:latest && nodemon src/app.js"
+    "start": "npx knex migrate:latest && nodemon src/app.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
