--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "description": "",
   "main": "src/app.js",
   "scripts": {
-    "start": "npx knex migrate:latest && nodemon src/app.js"
+    "heroku-prebuild": "npx knex migrate:latest",
+    "heroku-postbuild": "nodemon src/app.js",
+    "start": "nodemon src/app.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
