--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "",
   "main": "src/app.js",
   "scripts": {
-    "heroku-prebuild": "npx knex migrate:latest",
+    "heroku-prebuild": "npm install sqlite3 && npx knex migrate:latest",
     "heroku-postbuild": "nodemon src/app.js",
     "start": "nodemon src/app.js"
   },
